# ZeroMQPractice

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  initZeroMQEnv.py
src/: CMakeLists.txt
src/ClientTest/: CMakeLists.txt  main.cpp
src/GoServer/: client.go  client_req.go  client_req_sub.go  client_sub.go  go.mod  go.sum  lock.go  server.go
src/GoServer/BaseDatapb/: LogData.pb.go  TopData.pb.go
src/GoServer/EmployeeTestpb/: EmployeeTest.pb.go
src/GoServer/TrCtlpb/: TrMeasData.pb.go
src/GoServer/TrZeroMQMsgpb/: TopData.pb.go
src/ProtoController/: TopData.proto
src/ServerTest/: CMakeLists.txt  main.cpp
src/protoController/: CMakeLists.txt  EmployeeTest.proto  log.txt
